// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pop from route that wont let you leave:  - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/",
      "search": "",
      "url": "/",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "FIRST",
  },
  Object {
    "basename": "",
    "hash": "",
    "location": Object {
      "key": "345678",
      "pathname": "/second",
      "search": "",
      "url": "/second",
    },
    "params": Object {},
    "query": Object {},
    "state": Object {},
    "type": "SECOND",
  },
]
`;

exports[`pop from route that wont let you leave:  - history_index 1`] = `1`;

exports[`pop from route that wont let you leave:  - response 1`] = `false`;

exports[`pop from route that wont let you leave:  - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`pop from route that wont let you leave:  - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`pop from route that wont let you leave:  - routes - SECOND - beforeLeave 1`] = `1`;

exports[`pop from route that wont let you leave:  - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "direction": "backward",
        "entries": Array [
          Object {
            "basename": "",
            "hash": "",
            "location": Object {
              "key": "345678",
              "pathname": "/",
              "search": "",
              "url": "/",
            },
            "params": Object {},
            "query": Object {},
            "state": Object {},
            "type": "FIRST",
          },
          Object {
            "basename": "",
            "hash": "",
            "location": Object {
              "key": "345678",
              "pathname": "/second",
              "search": "",
              "url": "/second",
            },
            "params": Object {},
            "query": Object {},
            "state": Object {},
            "type": "SECOND",
          },
        ],
        "index": 0,
        "key": "345678",
        "kind": "back",
        "length": 2,
        "pathname": "/",
        "pop": true,
        "scene": "",
        "search": "",
        "status": 200,
        "url": "/",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/",
          "search": "",
          "url": "/",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/second",
          "search": "",
          "url": "/second",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/second",
    "pop": false,
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "location": Object {
            "key": "345678",
            "pathname": "/",
            "search": "",
            "url": "/",
          },
          "params": Object {},
          "query": Object {},
          "state": Object {},
          "type": "FIRST",
        },
      ],
      "hash": "",
      "index": 0,
      "key": "345678",
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/",
      "pop": false,
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second",
  },
  "title": "@@skiprudy/BLOCK - {\\"ref\\":{\\"type\\":\\"FIRST\\",\\"params\\":{},\\"query\\":{},\\"hash\\":\\"\\",\\"state\\":{},\\"basename\\":\\"\\",\\"location\\":{\\"url\\":\\"/\\",\\"pathname\\":\\"/\\",\\"search\\":\\"\\",\\"key\\":\\"345678\\",\\"scene\\":\\"\\",\\"direction\\":\\"backward\\",\\"status\\":200,\\"kind\\":\\"back\\",\\"entries\\":[{\\"type\\":\\"FIRST\\",\\"params\\":{},\\"query\\":{},\\"hash\\":\\"\\",\\"basename\\":\\"\\",\\"state\\":{},\\"location\\":{\\"url\\":\\"/\\",\\"key\\":\\"345678\\",\\"pathname\\":\\"/\\",\\"search\\":\\"\\"}},{\\"type\\":\\"SECOND\\",\\"params\\":{},\\"query\\":{},\\"hash\\":\\"\\",\\"basename\\":\\"\\",\\"state\\":{},\\"location\\":{\\"pathname\\":\\"/second\\",\\"search\\":\\"\\",\\"key\\":\\"345678\\",\\"url\\":\\"/second\\"}}],\\"index\\":0,\\"length\\":2,\\"pop\\":true}}}",
}
`;

exports[`pop from route that wont let you leave:  - title 1`] = `"SECOND"`;
